[package]
name = "slowprint"
version = "0.1.0"
edition = "2018"
license = "MIT"
description = "A small library for printing texts slowly which gives scrolling effect to the texts shown."
readme = "README.md"
repository = "https://github.com/gauravssnl/slowprint"
keywords = ["print", "display", "text", "cli", "terminal"]
categories = ["command-line-interface", "command-line-utilities", "gui"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
